feat: add local font loading and adjust header logo

--- a/header.html
+++ b/header.html
@@ -1,15 +1,7 @@
-<header class="flex items-center justify-between whitespace-nowrap border-b border-solid border-gray-200 px-6 md:px-10 py-4 shadow-sm">
+<header class="flex items-center justify-between whitespace-nowrap border-b border-solid border-gray-200 px-6 md:px-10 py-3 shadow-sm">
 <div class="flex items-center gap-3 text-slate-800">
-<svg class="h-8 w-8 text-[#1672ce]" fill="none" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
-<g clip-path="url(#clip0_6_535)">
-<path clip-rule="evenodd" d="M47.2426 24L24 47.2426L0.757355 24L24 0.757355L47.2426 24ZM12.2426 21H35.7574L24 9.24264L12.2426 21Z" fill="currentColor" fill-rule="evenodd"></path>
-</g>
-<defs>
-<clipPath id="clip0_6_535"><rect fill="white" height="48" width="48"></rect></clipPath>
-</defs>
-</svg>
-<h2 class="text-slate-800 text-xl font-bold leading-tight tracking-[-0.015em]">NTT DATA Spain</h2>
-</div>
+<img src="images/GlobalLogo_NTTDATA_FutureBlue_RGB.svg" alt="NTT DATA" class="w-40 md:w-48" />
+
 <nav class="hidden md:flex items-center gap-6">
 <a class="text-slate-700 hover:text-[#1672ce] text-sm font-medium leading-normal transition-colors" href="/industries">Industries</a>
 <a class="text-slate-700 hover:text-[#1672ce] text-sm font-medium leading-normal transition-colors" href="/solutions">Solutions</a>
