--- a/industries/financialservices/index.html
+++ b/industries/financialservices/index.html
@@ -52,7 +52,7 @@
         <h1 class="text-slate-800 text-xl font-bold">NTT DATA Spain</h1>
       </div>
       <nav class="flex flex-1 justify-center gap-8">
-        <a class="text-slate-700 hover:text-blue-600 text-sm font-medium leading-normal transition-colors" href="../../index.html">Home</a>
+        <a class="text-slate-700 hover:text-blue-600 text-sm font-medium leading-normal transition-colors" href="../../home.html">Home</a>
         <a class="text-slate-700 hover:text-blue-600 text-sm font-medium leading-normal transition-colors" href="../industries/index.html">Industries</a>
       </nav>
     </header>
@@ -60,6 +60,30 @@
     <!-- Main Content -->
     <main class="px-4 sm:px-10 md:px-20 lg:px-40 flex flex-1 justify-center py-8 bg-slate-50">
       <div class="layout-content-container flex flex-col max-w-5xl flex-1">
+
+        <!-- Breadcrumb -->
+        <nav class="mb-8" aria-label="Breadcrumb">
+          <ol class="inline-flex items-center space-x-1 md:space-x-3">
+            <li class="inline-flex items-center">
+              <a href="../../home.html" class="inline-flex items-center text-sm font-medium text-slate-500 hover:text-slate-700">
+                <span class="material-symbols-outlined mr-2">home</span>
+                Home
+              </a>
+            </li>
+            <li>
+              <div class="flex items-center">
+                <span class="material-symbols-outlined text-slate-400 mx-1" style="font-size: 1.25rem;">chevron_right</span>
+                <a href="../" class="ml-1 text-sm font-medium text-slate-500 hover:text-slate-700">Industries</a>
+              </div>
+            </li>
+            <li aria-current="page">
+              <div class="flex items-center">
+                <span class="material-symbols-outlined text-slate-400 mx-1" style="font-size: 1.25rem;">chevron_right</span>
+                <span class="ml-1 text-sm font-medium text-slate-400">Financial Services</span>
+              </div>
+            </li>
+          </ol>
+        </nav>
 
         <!-- Industry Header -->
         <section class="mb-12 text-center">
